completed all questions

--- a/q2.html
+++ b/q2.html
@@ -2,18 +2,30 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
+
     <style>
+        x-magic {
+            color: red;
+            font-size: 2em;
+            font-family: 'Kalam', cursive;
+        }
     </style>
 </head>
 
 <body>
     <h1>The magic 8 ball</h1>
-    <input /><br />
+    <input placeholder="Ask me anything!" /><br />
     <x-magic />
     <script>
         class Magic8Ball extends HTMLElement{
             connectedCallback(){
-                this.innerHTML = 
+                this.innerHTML = nAnswer
+
+                
 `
     <button id="question">Ask</button>
     <p id="answer"></p>
