--- a/q5.html
+++ b/q5.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <main>
@@ -9,7 +10,7 @@
             <picture>
                 <source srcset="readmeimages/400x600.png"
                     media="(orientation: portrait)">
-                <img src="readmeimages/728x200.png" />
+                <img src="readmeimages/728x200.png" alt="Gray image with the words this is for desktop" style="max-width:100%;height:auto;"/>
             </picture>
             <figcaption>responsive placeholder image</figcaption>
         </figure>
