--- a/q2.html
+++ b/q2.html
@@ -23,7 +23,7 @@
     <script>
         class Magic8Ball extends HTMLElement{
             connectedCallback(){
-                this.innerHTML = nAnswer
+                this.innerHTML =
 
                 
 `
